--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production",
-    "dev": "webpack --mode development",
+    "start": "webpack-dev-server --config webpack.config.prod.js --open --hot",
+    "dev": "webpack-dev-server --config webpack.config.dev.js --open --hot",
+    "build-prod": "webpack --config webpack.config.prod.js",
+    "build-dev": "webpack  --config webpack.config.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Suseendran K",
   "license": "Home",
   "dependencies": {
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -28,6 +30,7 @@
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.1.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
