--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.prod.js --open --hot",
-    "dev": "webpack-dev-server --config webpack.config.dev.js --open --hot",
+    "start": "webpack-dev-server --config webpack.config.prod.js --open",
+    "dev": "webpack-dev-server --config webpack.config.dev.js --open",
     "build-prod": "webpack --config webpack.config.prod.js",
     "build-dev": "webpack  --config webpack.config.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
