--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "author": "Suseendran K",
   "license": "Home",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.0.2",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
