--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/dist
 /node_modules
 /.pnp
 .pnp.js
@@ -23,3 +24,6 @@ yarn-debug.log*
 yarn-error.log*
 
 yarn.lock*
+
+package-lock.json
+
