--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^5.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "express-validator": "^6.3.1",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.7",
