--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.2",
+    "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
+    "express-session": "^1.17.1",
     "express-validator": "^6.3.1",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.7",
+    "node-cleanup": "^2.1.2",
+    "node-uuid": "^1.4.8",
     "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
